# MiniLangCompiler

./: .gitignore  CMakeLists.txt  Grammar.md  README.md  main.cpp
grammar/: parser_grammar_with_sets.md  user_grammar.md
include/: AST.h  ASTVisualizer.h  CodeGenerator.h  ErrorHandler.h  IR.h  IRGenerator.h  IRInterpreter.h  IROptimizer.h  Lexer.h  Optimizer.h  Parser.h  Token.h
input/: test_1.txt  test_10.txt  test_11.txt  test_12.txt  test_13.txt  test_14.txt  test_15.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt  test_7.txt  test_8.txt  test_9.txt  test_input.txt
src/: AST.cpp  ASTVisualizer.cpp  CodeGenerator.cpp  ErrorHandler.cpp  IR.cpp  IRGenerator.cpp  IRInterpreter.cpp  IROptimizer.cpp  Lexer.cpp  Parser.cpp
